<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.88"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.88" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button_view_all"
                    android:layout_width="65dp"
                    android:layout_height="68dp"
                    android:text="@string/view_all" />

                <com.wormz.penumbraface.CameraView
                    android:id="@+id/camera_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.88" />

                <ImageView
                    android:id="@+id/imageView_face_recognized"
                    android:layout_width="120dp"
                    android:layout_height="140dp"
                    android:src="@drawable/default_image"
                     />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/idle"
                android:layout_width="190dp"
                android:layout_height="wrap_content"                
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
        
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >

		    <ToggleButton
		        android:id="@+id/togglebutton_train"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:layout_weight="0.07"
		        android:text="@string/train"
		        android:textOff="@string/train"
		        android:textOn="@string/stop_train" />

		    <TextView
		        android:id="@+id/textView_face_name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.71"
		        android:text="@string/face_name"
		        android:textAppearance="?android:attr/textAppearanceLarge" />

		    <EditText
		        android:id="@+id/edittext_input_description"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1.76"
		        android:maxLines="1"
		        android:singleLine="true" >

		        <requestFocus />
		    </EditText>

		    <ToggleButton
		        android:id="@+id/togglebutton_search"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:text="@string/search"
		        android:textOff="@string/search"
		        android:textOn="@string/stop_search" />

		    <ToggleButton
		        android:id="@+id/togglebutton_record"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:text="@string/record"
		        android:textOff="@string/record"
		        android:textOn="@string/stop" />

		    <ImageView
		        android:id="@+id/imagebutton_switch_camera"
		        android:layout_width="100dp"
		        android:layout_height="100dp"		        
		        android:src="@drawable/switch_camera" />

		</LinearLayout>
            
    	</LinearLayout>
    
</LinearLayout>